packages/portfolio-site/main/default/objects/Skill__c/fields/Category_Order__c.field-meta.xml
<CustomField>
    <fullName>Category_Order__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Controls left-to-right grouping order in skill network graph</description>
    <label>Category Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>