packages/portfolio-site/main/default/objects/Skill__c/fields/Color_Hex__c.field-meta.xml
<CustomField>
    <fullName>Color_Hex__c</fullName>
    <defaultValue>&quot;#00A1E0&quot;</defaultValue>
    <description>Exact color for G6 node fill (bypasses category color)</description>
    <label>Color Hex</label>
    <length>7</length>
    <type>Text</type>
</CustomField>