packages/portfolio-site/main/default/objects/Skill__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Short label for graph nodes. Falls back to Name if blank</description>
    <label>Display Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>