packages/portfolio-site/main/default/objects/Skill__c/fields/Proficiency_Score__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_Score__c</fullName>
    <defaultValue>80</defaultValue>
    <description>1–100. Drives node radius in AntV G6 skill graph</description>
    <label>Proficiency Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>