packages/portfolio-site/main/default/objects/Skill__c/fields/SVG_Path_Data__c.field-meta.xml
<CustomField>
    <fullName>SVG_Path_Data__c</fullName>
    <description>Raw  for custom inline SVG icons (faster than Static Resource)</description>
    <label>SVG Path Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>